Bug 1662038 - Fix printer-name handling on macOS so it doesn't fail on the fake "Save to PDF" destination. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D88897